--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="navbar">
-    <div class="brand"><a href="/">Logo</a></div>
+    <div class="brand"><a href="/burn">Logo</a></div>
     <div class="text">Iphone</div>
   </div>
   <div class="title">Privacy & Policy</div>
