--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet/less" type="text/css" href="styles.less" />
   <script src="https://cdn.jsdelivr.net/npm/less" ></script>
-  <title>Document</title>
+  <title>Burn</title>
 </head>
 <body>
   <div class="navbar">
